# atcore-cli

./: CMakeLists.txt  README
src/: CMakeLists.txt  kiln.cpp  kiln.h  main.cpp
